import time added

--- a/CS4200/Project/CS4200_ChessAIRedemption.ipynb
+++ b/CS4200/Project/CS4200_ChessAIRedemption.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 288,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 289,
+      "execution_count": 2,
       "metadata": {
         "id": "3_EQPsNkPH-7"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 290,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -64,7 +64,7 @@
               "Board('rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1')"
             ]
           },
-          "execution_count": 290,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 291,
+      "execution_count": 4,
       "metadata": {
         "id": "nZU68VvOPK_c"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 292,
+      "execution_count": 5,
       "metadata": {
         "id": "-Ey6rgQ5PRZ8"
       },
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 293,
+      "execution_count": 6,
       "metadata": {
         "id": "UYOoe3GoPeK0"
       },
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 294,
+      "execution_count": 7,
       "metadata": {
         "id": "fuNe6eSXPhPT"
       },
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 295,
+      "execution_count": 8,
       "metadata": {
         "id": "v83o3DeXPnud"
       },
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 296,
+      "execution_count": 9,
       "metadata": {
         "id": "ORXg4owVPtS0"
       },
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 297,
+      "execution_count": 10,
       "metadata": {
         "id": "t132XlX6P7o7"
       },
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 298,
+      "execution_count": 11,
       "metadata": {
         "id": "lq9TTyCkSR26"
       },
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 299,
+      "execution_count": 12,
       "metadata": {
         "id": "RxVsXWazSTmD"
       },
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 300,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -529,7 +529,7 @@
               "<IPython.core.display.SVG object>"
             ]
           },
-          "execution_count": 300,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -564,11 +564,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 301,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Remaining imports\n",
+        "import time\n",
         "import traceback\n",
         "from flask import Flask, Response, request\n",
         "import webbrowser\n",
@@ -622,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 302,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -640,24 +641,25 @@
             "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
             " * Running on http://127.0.0.1:5000\n",
             "Press CTRL+C to quit\n",
-            "127.0.0.1 - - [06/May/2024 22:14:35] \"GET / HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 22:14:35] \"GET /board.svg?1715058875.866615 HTTP/1.1\" 308 -\n",
-            "127.0.0.1 - - [06/May/2024 22:14:35] \"GET /board.svg/?1715058875.866615 HTTP/1.1\" 200 -\n",
+            "[2024-05-06 22:37:00,887] ERROR in app: Exception on / [GET]\n",
             "Traceback (most recent call last):\n",
-            "  File \"C:\\Users\\Raini\\AppData\\Local\\Temp\\ipykernel_1600\\3918185190.py\", line 37, in move\n",
-            "    board.push_san(move)\n",
-            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\chess\\__init__.py\", line 3105, in push_san\n",
-            "    move = self.parse_san(san)\n",
-            "           ^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\chess\\__init__.py\", line 3063, in parse_san\n",
-            "    move = self.find_move(square(from_file, from_rank), to_square, promotion)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\chess\\__init__.py\", line 2357, in find_move\n",
-            "    raise IllegalMoveError(f\"no matching legal move for {move.uci()} ({SQUARE_NAMES[from_square]} -> {SQUARE_NAMES[to_square]}) in {self.fen()}\")\n",
-            "chess.IllegalMoveError: no matching legal move for a7a6 (a7 -> a6) in rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1\n",
-            "127.0.0.1 - - [06/May/2024 22:14:39] \"GET /move/?move=a7a6 HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 22:14:39] \"GET /board.svg?1715058879.546235 HTTP/1.1\" 308 -\n",
-            "127.0.0.1 - - [06/May/2024 22:14:39] \"GET /board.svg/?1715058879.546235 HTTP/1.1\" 200 -\n"
+            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 2525, in wsgi_app\n",
+            "    response = self.full_dispatch_request()\n",
+            "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 1822, in full_dispatch_request\n",
+            "    rv = self.handle_user_exception(e)\n",
+            "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 1820, in full_dispatch_request\n",
+            "    rv = self.dispatch_request()\n",
+            "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 1796, in dispatch_request\n",
+            "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"C:\\Users\\Raini\\AppData\\Local\\Temp\\ipykernel_37300\\2891510048.py\", line 23, in main\n",
+            "    ret += '<img width=510 height=510 src=\"/board.svg?%f\"></img></br></br>' % time.time()\n",
+            "                                                                              ^^^^\n",
+            "NameError: name 'time' is not defined\n",
+            "127.0.0.1 - - [06/May/2024 22:37:00] \"GET / HTTP/1.1\" 500 -\n"
           ]
         }
       ],
