Fixed Alg, legal moves incorrectly interpretted as illegal
Swapped to using board.push() instead of board.push_san()

--- a/CS4200/Project/CS4200_ChessAIRedemption.ipynb
+++ b/CS4200/Project/CS4200_ChessAIRedemption.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 136,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 137,
       "metadata": {
         "id": "3_EQPsNkPH-7"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 138,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -64,7 +64,7 @@
               "Board('rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1')"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 138,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 139,
       "metadata": {
         "id": "nZU68VvOPK_c"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 140,
       "metadata": {
         "id": "-Ey6rgQ5PRZ8"
       },
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 141,
       "metadata": {
         "id": "UYOoe3GoPeK0"
       },
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 142,
       "metadata": {
         "id": "fuNe6eSXPhPT"
       },
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 143,
       "metadata": {
         "id": "v83o3DeXPnud"
       },
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 144,
       "metadata": {
         "id": "ORXg4owVPtS0"
       },
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 145,
       "metadata": {
         "id": "t132XlX6P7o7"
       },
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 146,
       "metadata": {
         "id": "lq9TTyCkSR26"
       },
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 147,
       "metadata": {
         "id": "RxVsXWazSTmD"
       },
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 148,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -529,7 +529,7 @@
               "<IPython.core.display.SVG object>"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 148,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -564,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 149,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -605,7 +605,9 @@
         "def move():\n",
         "    try:\n",
         "        move = request.args.get('move', default=\"\")\n",
-        "        board.push_san(move)\n",
+        "        board.push(chess.Move.from_uci(move))\n",
+        "        print(move)\n",
+        "        print(chess.Move.from_uci(move))\n",
         "        \n",
         "        aimove()\n",
         "    except Exception:\n",
@@ -623,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 150,
       "metadata": {},
       "outputs": [
         {
@@ -641,25 +643,21 @@
             "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
             " * Running on http://127.0.0.1:5000\n",
             "Press CTRL+C to quit\n",
-            "[2024-05-06 22:37:00,887] ERROR in app: Exception on / [GET]\n",
-            "Traceback (most recent call last):\n",
-            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 2525, in wsgi_app\n",
-            "    response = self.full_dispatch_request()\n",
-            "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 1822, in full_dispatch_request\n",
-            "    rv = self.handle_user_exception(e)\n",
-            "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 1820, in full_dispatch_request\n",
-            "    rv = self.dispatch_request()\n",
-            "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"c:\\Users\\Raini\\anaconda3\\Lib\\site-packages\\flask\\app.py\", line 1796, in dispatch_request\n",
-            "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"C:\\Users\\Raini\\AppData\\Local\\Temp\\ipykernel_37300\\2891510048.py\", line 23, in main\n",
-            "    ret += '<img width=510 height=510 src=\"/board.svg?%f\"></img></br></br>' % time.time()\n",
-            "                                                                              ^^^^\n",
-            "NameError: name 'time' is not defined\n",
-            "127.0.0.1 - - [06/May/2024 22:37:00] \"GET / HTTP/1.1\" 500 -\n"
+            "127.0.0.1 - - [06/May/2024 23:03:41] \"GET / HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:41] \"GET /board.svg?1715061821.344306 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:41] \"GET /board.svg/?1715061821.344306 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:43] \"POST /game/ HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:43] \"GET /board.svg?1715061823.410496 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:43] \"GET /board.svg/?1715061823.410496 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:45] \"GET /move/?move=g8g6 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:45] \"GET /board.svg?1715061825.785163 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:45] \"GET /board.svg/?1715061825.785163 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:48] \"POST /game/ HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:48] \"GET /board.svg?1715061828.180607 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:48] \"GET /board.svg/?1715061828.180607 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:54] \"GET /move/?move=g8g6 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:54] \"GET /board.svg?1715061834.924833 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:03:54] \"GET /board.svg/?1715061834.924833 HTTP/1.1\" 200 -\n"
           ]
         }
       ],
