legal moves incorrectly marked as illegal, and vice versa
Fixed, knight can move as it wants now

--- a/CS4200/Project/CS4200_ChessAIRedemption.ipynb
+++ b/CS4200/Project/CS4200_ChessAIRedemption.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 211,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 212,
       "metadata": {
         "id": "3_EQPsNkPH-7"
       },
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 213,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -64,7 +64,7 @@
               "Board('rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1')"
             ]
           },
-          "execution_count": 138,
+          "execution_count": 213,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 214,
       "metadata": {
         "id": "nZU68VvOPK_c"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 215,
       "metadata": {
         "id": "-Ey6rgQ5PRZ8"
       },
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 216,
       "metadata": {
         "id": "UYOoe3GoPeK0"
       },
@@ -201,7 +201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 217,
       "metadata": {
         "id": "fuNe6eSXPhPT"
       },
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 218,
       "metadata": {
         "id": "v83o3DeXPnud"
       },
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 219,
       "metadata": {
         "id": "ORXg4owVPtS0"
       },
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 220,
       "metadata": {
         "id": "t132XlX6P7o7"
       },
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": 221,
       "metadata": {
         "id": "lq9TTyCkSR26"
       },
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 222,
       "metadata": {
         "id": "RxVsXWazSTmD"
       },
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": 223,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -529,7 +529,7 @@
               "<IPython.core.display.SVG object>"
             ]
           },
-          "execution_count": 148,
+          "execution_count": 223,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -564,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": 224,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -605,9 +605,8 @@
         "def move():\n",
         "    try:\n",
         "        move = request.args.get('move', default=\"\")\n",
-        "        board.push(chess.Move.from_uci(move))\n",
-        "        print(move)\n",
-        "        print(chess.Move.from_uci(move))\n",
+        "        board.push_san(move)\n",
+        "\n",
         "        \n",
         "        aimove()\n",
         "    except Exception:\n",
@@ -625,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 225,
       "metadata": {},
       "outputs": [
         {
@@ -641,23 +640,23 @@
           "output_type": "stream",
           "text": [
             "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-            " * Running on http://127.0.0.1:5000\n",
+            " * Running on http://127.0.0.1:5000\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
             "Press CTRL+C to quit\n",
-            "127.0.0.1 - - [06/May/2024 23:03:41] \"GET / HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:41] \"GET /board.svg?1715061821.344306 HTTP/1.1\" 308 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:41] \"GET /board.svg/?1715061821.344306 HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:43] \"POST /game/ HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:43] \"GET /board.svg?1715061823.410496 HTTP/1.1\" 308 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:43] \"GET /board.svg/?1715061823.410496 HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:45] \"GET /move/?move=g8g6 HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:45] \"GET /board.svg?1715061825.785163 HTTP/1.1\" 308 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:45] \"GET /board.svg/?1715061825.785163 HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:48] \"POST /game/ HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:48] \"GET /board.svg?1715061828.180607 HTTP/1.1\" 308 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:48] \"GET /board.svg/?1715061828.180607 HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:54] \"GET /move/?move=g8g6 HTTP/1.1\" 200 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:54] \"GET /board.svg?1715061834.924833 HTTP/1.1\" 308 -\n",
-            "127.0.0.1 - - [06/May/2024 23:03:54] \"GET /board.svg/?1715061834.924833 HTTP/1.1\" 200 -\n"
+            "127.0.0.1 - - [06/May/2024 23:11:55] \"GET / HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:11:55] \"GET /board.svg?1715062315.833115 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:11:55] \"GET /board.svg/?1715062315.833115 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:12:01] \"GET /move/?move=g8h6 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:12:01] \"GET /board.svg?1715062321.022921 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:12:01] \"GET /board.svg/?1715062321.022921 HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:12:04] \"POST /game/ HTTP/1.1\" 200 -\n",
+            "127.0.0.1 - - [06/May/2024 23:12:04] \"GET /board.svg?1715062324.751352 HTTP/1.1\" 308 -\n",
+            "127.0.0.1 - - [06/May/2024 23:12:04] \"GET /board.svg/?1715062324.751352 HTTP/1.1\" 200 -\n"
           ]
         }
       ],
